--- a/example.config
+++ b/example.config
@@ -18,3 +18,10 @@ rows = 8
 columns = 3
 description = A4 sheet with labels, no extra margins
 pagesize = A4
+
+[Avery-6521]
+type = profile
+rows = 10
+columns = 3
+description = 
+pagesize = LETTER
