Working for both inventory and collections, still not there for using a label format that would work on Avery Labels, and everythings a bit bit in the pdf

--- a/example.config
+++ b/example.config
@@ -10,7 +10,7 @@ height = 44
 width = 89
 unit = mm
 description = Dymo 11356 labels
-fields = artist:title:media:sleeve
+fields = artist:title:condition
 
 [a4-8x3]
 type = profile
@@ -18,6 +18,7 @@ rows = 8
 columns = 3
 description = A4 sheet with labels, no extra margins
 pagesize = A4
+fields = artist:title:condition
 
 [Avery-6521]
 type = profile
